--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="https://kit.fontawesome.com/391827d54c.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="./Assets/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
-    <title>Netflix India - Watch TV Shows Online, Watch Movies Online</title>
+    <title>Catflix - Watch Cat Videos Online, Watch Cat Movies Online</title>
 </head>
 <body>
     <div class="header">
@@ -20,7 +20,7 @@
         </nav>
 
         <div class="header-content">
-            <h1>Unlimited movies, TV shows and more.</h1>
+            <h1>Unlimited Cats, Kittens and more.</h1>
             <h3>Watch anywhere. Cancel anytime.</h3>
             <p>Ready to watch? Enter your email to create or restart your membership.</p>
             <form action="#" class="email-signup">
@@ -34,7 +34,7 @@
         <div class="row">
             <div class="text-col">
                 <h2>Enjoy on your TV.</h2>
-                <p>Watch on smart TVs, PlayStation, Xbox, Chromecast, Apple TV, Blu-ray players and more.</p>
+                <p>Watch on smart TVs, PlayStation, Xbox, Chromecast, Apple TV, Cat-Vision and more.</p>
             </div>
             <div class="img-col">
                 <img src="./Assets/feature-1.png" alt="feature-1">
